[gd_scene load_steps=4 format=3 uid="uid://cb2quddhy0rx1"]

[ext_resource type="Script" uid="uid://bvm4x8utuqih5" path="res://Modules/Player/Assets/NearMissEncounter/NearMisser.gd" id="1_o2w2d"]
[ext_resource type="Texture2D" uid="uid://cjh0iud4mx5ek" path="res://Modules/Player/Assets/NearMissEncounter/Arrow.png" id="1_ybhx1"]

[sub_resource type="LabelSettings" id="LabelSettings_xfk37"]
font_size = 21
font_color = Color(0.152941, 0.745098, 1, 1)

[node name="NearMisser" type="Node2D"]
script = ExtResource("1_o2w2d")

[node name="playerArrow" type="Sprite2D" parent="."]
position = Vector2(-41, -2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_ybhx1")
offset = Vector2(55, 0)

[node name="playerDistanceNode" type="Node2D" parent="playerArrow"]
position = Vector2(42.5, 0)
scale = Vector2(2.26252, 2.26252)

[node name="planetArrow" type="Sprite2D" parent="."]
position = Vector2(44, 0)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_ybhx1")

[node name="planetDistanceNode" type="Node2D" parent="planetArrow"]
position = Vector2(-13.5751, 0)
scale = Vector2(2.26252, 2.26252)

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 30.0
offset_bottom = 6.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -21.0
offset_top = -15.0
offset_right = 47.0
offset_bottom = 15.0
scale = Vector2(0.523526, 0.523526)
pivot_offset = Vector2(-83.9975, -89.1864)
text = "1200m"
label_settings = SubResource("LabelSettings_xfk37")

[node name="CameraTarget" type="Node2D" parent="."]
